<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity">
            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/title"
                android:textColor="@color/orange"
                android:textSize="@dimen/app_name"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/cuisine_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cuisine_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cuisines"
                android:textSize="@dimen/big"
                android:textColor="@color/black"
                android:layout_margin="8dp"
                app:layout_constraintTop_toBottomOf="@id/app_name"
                app:layout_constraintStart_toStartOf="@id/app_name"
                app:layout_constraintBottom_toTopOf="@id/cuisine_recycler"/>

            <TextView
                android:id="@+id/view_all_cuisines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="17dp"
                android:text="@string/view_all"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/small"
                app:layout_constraintBottom_toBottomOf="@+id/cuisine_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/cuisine_text" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cuisine_recycler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cuisine_text"
                app:layout_constraintBottom_toTopOf="@id/for_you"
                tools:listitem="@layout/cuisine_card" />
            <TextView
                android:id="@+id/for_you"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/for_you"
                android:textSize="@dimen/big"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@id/recipe_recycler"
                app:layout_constraintStart_toStartOf="@id/cuisine_text"
                app:layout_constraintTop_toBottomOf="@id/cuisine_recycler"/>

            <TextView
                android:id="@+id/view_all_foryou"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="17dp"
                android:text="@string/view_all"
                android:textSize="@dimen/small"
                android:textColor="@color/dark_gray"
                app:layout_constraintTop_toTopOf="@+id/for_you"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/recipe_recycler"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recipe_recycler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/for_you"
                app:layout_constraintBottom_toTopOf="@id/under_twenty_text"
                tools:listitem="@layout/recipe_card" />
            <TextView
                android:id="@+id/under_twenty_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/cuisine_text"
                android:text="@string/under_20_min_meal"
                android:textSize="@dimen/big"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/recipe_recycler"
                app:layout_constraintBottom_toTopOf="@id/under_twenty_recycler"
                />

            <TextView
                android:id="@+id/view_all_under20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="17dp"
                android:text="@string/view_all"
                android:textSize="@dimen/small"
                android:textColor="@color/dark_gray"
                app:layout_constraintTop_toTopOf="@+id/under_twenty_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/under_twenty_text"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/under_twenty_recycler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:clipToOutline="true"
                android:layout_margin="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/under_twenty_text"
                app:layout_constraintBottom_toTopOf="@id/under_five_text"
                tools:listitem="@layout/under_twenty_card" />
            <TextView
                android:id="@+id/under_five_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/cuisine_text"
                android:text="@string/under_5_ingredient_meal"
                android:textSize="@dimen/big"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/under_twenty_recycler"
                app:layout_constraintBottom_toTopOf="@id/under_five_recycler"
                />
            <TextView
                android:id="@+id/view_all_under5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="17dp"
                android:text="@string/view_all"
                android:textSize="@dimen/small"
                android:textColor="@color/dark_gray"
                app:layout_constraintTop_toTopOf="@+id/under_five_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/under_five_text"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/under_five_recycler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/under_five_ingredient_card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/under_five_text"
                />

            <TextView

                android:id="@+id/t1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="hello"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/under_twenty_recycler" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/cuisine_fragment"
        android:name="com.example.masala_food_recipes.ui.fragment.CuisineFragment"
        android:background="@color/white"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>