<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/top_app_bar"
        style="@style/navigationColor"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:nestedScrollingEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/top_app_bar_menu"
        app:navigationIcon="@drawable/arrow_back"
        app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
        app:title="@string/details" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/fragment_container"
        style="@style/background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_app_bar"
        tools:ignore="NotSibling">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/margin_start_end">


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/recipe_imageview"
                android:layout_width="match_parent"
                android:layout_height="224dp"
                android:layout_marginTop="8dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/roundedImage"
                tools:ignore="MissingConstraints,NotSibling"
                tools:src="@drawable/image" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/recipe_prepare_time"
                style="@style/details"
                android:layout_width="0dp"
                android:layout_height="58dp"
                android:layout_marginTop="20dp"
                android:drawableTop="@drawable/cooking_time"
                android:orientation="vertical"
                android:padding="8dp"
                android:textAllCaps="false"
                app:layout_constraintEnd_toStartOf="@id/ingredients_count"
                app:layout_constraintStart_toStartOf="@+id/recipe_imageview"
                app:layout_constraintTop_toBottomOf="@+id/recipe_imageview"
                tools:text="20 min" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ingredients_count"
                style="@style/details"
                android:layout_width="0dp"
                android:layout_height="58dp"
                android:layout_marginHorizontal="8dp"
                android:drawableTop="@drawable/dish_svgrepo_com_2"
                android:padding="8dp"
                app:layout_constraintEnd_toStartOf="@+id/more_info"
                app:layout_constraintStart_toEndOf="@+id/recipe_prepare_time"
                app:layout_constraintTop_toTopOf="@+id/recipe_prepare_time"
                tools:text="4" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/more_info"
                style="@style/details"
                android:layout_width="0dp"
                android:layout_height="58dp"
                android:drawableTop="@drawable/square_share_line2"
                android:padding="8dp"
                android:text="@string/more_info"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="@+id/recipe_imageview"
                app:layout_constraintStart_toEndOf="@id/ingredients_count"
                app:layout_constraintTop_toTopOf="@+id/ingredients_count" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/name_recipe"
                style="@style/textColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recipe_prepare_time"
                tools:text="Masala Recipe" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                style="@style/tabLayout"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/viewpager"
                app:layout_constraintCircleRadius="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@drawable/tab_layout"
                app:tabIndicator="@drawable/button"
                app:tabIndicatorColor="@null"
                app:tabIndicatorFullWidth="true"
                app:tabIndicatorGravity="stretch"
                app:tabMode="fixed"
                app:layout_constraintTop_toBottomOf="@id/name_recipe">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredients" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/instruction" />
            </com.google.android.material.tabs.TabLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewpager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tab_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
